# Study-Companion

./: .gitignore  .replit  DEPLOY.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: auth_utils.py  database.py  main.py  models.py  quiznet.db  seed.py  wsgi.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/routers/: auth.py  courses.py  eval_types.py  questions.py  quizzes.py  stats.py  suggestions.py
artifacts/quiznet/: index.html  package.json  vite.build.config.ts
artifacts/quiznet/.replit-artifact/: artifact.toml
artifacts/quiznet/src/: App.tsx  index.css
artifacts/quiznet/src/components/: global-search.tsx  notification-bell.tsx  suggestion-modal.tsx  theme-toggle.tsx
artifacts/quiznet/src/components/ui/: skeleton.tsx  toast.tsx
artifacts/quiznet/src/hooks/: use-theme.tsx  use-toast.ts
artifacts/quiznet/src/layouts/: index.tsx
artifacts/quiznet/src/lib/: utils.ts
artifacts/quiznet/src/pages/: not-found.tsx
artifacts/quiznet/src/pages/admin/: courses.tsx  dashboard.tsx  eval-types.tsx  login.tsx  questions.tsx  quizzes.tsx  settings.tsx  suggestions.tsx
artifacts/quiznet/src/pages/public/: about.tsx  course-detail.tsx  courses.tsx  home.tsx  read.tsx  train.tsx
lib/api-spec/: openapi.yaml
