[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]
